style: reformatting code